# aws-2026-summit-shanghai-workshop

./: .gitignore  00-config.sh  00-deploy-infra.sh  00-setup.sh  01-create-kb.sh  02-create-gateway.sh  03-configure-skills.sh  04-deploy.sh  05-setup-memory.sh  06-test-conversation.sh  07-setup-eval-env.sh  08-create-evaluators.sh  09-run-eval.sh  10-optimize-prompt.sh  11-cost-latency.sh  12-compare-models.sh  13-judge-stability.sh  99-cleanup.sh  CONTRIBUTING.md  README.md  create-kb.sh  setup-memory.sh
cfn/: workshop-infra.yaml
docs-site/: mkdocs.yml
evaluators/: README.md
evaluators/mtg_eval/: execution-role-policy.json  lambda_function.py  pyproject.toml  session_adapter.py
evaluators/mtg_eval/evaluators/mind_the_goal/: __init__.py  gsr.py  prompts.py  segmentation.py  turn_quality.py
evaluators/mtg_eval/shared/: logger.py  models.py
gateway/: create_gateway.py  hr-tools-schema.json
knowledge-base/: create_kb.py  domain_faqs.py  generate_hr_docs.py
lambda/: hr_tools_handler.py
scripts/: convert_v2.mjs  rescrape_broken.mjs  scrape_html.mjs
workshop-html/: 010-introduction.html  015-access-account.alerts.json  015-access-account.html  015-getting-started.alerts.json  015-getting-started.html  017-prerequisites.alerts.json  017-prerequisites.html  030-understand-harness.alerts.json  030-understand-harness.html  041-connect.alerts.json  041-connect.html  042-knowledge-base.alerts.json  042-knowledge-base.html  042-knowledge-base.images.json  043-gateway.alerts.json  043-gateway.html  043-gateway.images.json  044-skills.alerts.json  044-skills.html  (+44 more)
(+44 files in other folders)
