[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtg_goal_success"
version = "0.1.0"
description = "AgentCore Code-Based Evaluator"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore>=1.6.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["evaluators", "shared"]
include = ["lambda_function.py", "session_adapter.py"]
